<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/customer_profile_creation_txtWelcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/customer_profile_creation_txtSubtitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/customer_profile_creation_txtContactDetailsrRequest" />

        <EditText
            android:id="@+id/customer_profile_creation_edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/customer_profile_creation_edtName_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="15" />

        <EditText
            android:id="@+id/customer_profile_creation_edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_profile_creation_edtPhoneNumber_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="13" />
    </LinearLayout>

    <Button
        android:id="@+id/customer_profile_creation_btnDone"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/customer_profile_creation_btnDone"
        android:textAppearance="?android:attr/textAppearanceButton" />

</RelativeLayout>