<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gling.bookmeup.main.MainActivity$LoginWithEmail" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_with_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email_login_edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_login_edtUserNameHint"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_login_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_login_edtPasswordHint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/email_login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:text="@string/email_login_btnLogin" />

        <TextView
            android:id="@+id/email_login_txtForgotPassword"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/login_forgot_password" />
    </LinearLayout>

</LinearLayout>