<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gling.bookmeup.main.MainActivity$LoginFragment" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_with_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_btnLoginWithEMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:text="@string/login_btnLoginWithEMailText"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/login_btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:text="@string/login_btnSignUpText"
            android:textSize="20.0sp" />

        <TextView
            android:id="@+id/login_txtContact"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login_txtContact" />
    </LinearLayout>

</LinearLayout>