<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bookmeup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_action_search" />

        <EditText
            android:id="@+id/customer_all_businesses_list_edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:hint="@string/customer_all_businesses_list_search_edtSearchHint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />
    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/customer_all_businesses_viewSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right" >

        <!--
        <com.gling.bookmeup.main.views.CardListViewWrapperView
            android:id="@+id/business_bookings_cardListViewPendingBookings"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            bookmeup:emptyListText="@string/business_bookings_list_no_pending_bookings" />
        -->

        <com.gling.bookmeup.main.views.CardGridViewWrapperView
            android:id="@+id/customer_all_businesses_categoryGridView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="150dp"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="3dp" />

        <com.gling.bookmeup.main.views.CardListViewWrapperView
            android:id="@+id/customer_all_businesses_cardListViewAllBusinessesByType"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            bookmeup:emptyListText="@string/customer_all_businesses_list_no_businesses_by_type" />
    </ViewSwitcher>

</LinearLayout>